[gd_scene load_steps=4 format=3 uid="uid://fhvnsyq2ef5e"]

[ext_resource type="Texture2D" uid="uid://djm0y47fv0xgg" path="res://textures/icon.png" id="1_1gjhg"]
[ext_resource type="Script" path="res://scenes/onscreen scenes/starting_menu.gd" id="1_2larx"]
[ext_resource type="Theme" uid="uid://sqgks8wwf6dj" path="res://basic_theme.tres" id="3_2ggk3"]

[node name="Starting menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2larx")

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(0.859899, 0.859898)
texture = ExtResource("1_1gjhg")
centered = false

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -64.0
offset_right = 58.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="Find game" type="Button" parent="VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme = ExtResource("3_2ggk3")
theme_override_font_sizes/font_size = 48
text = "Find game"

[node name="Settings" type="Button" parent="VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme = ExtResource("3_2ggk3")
theme_override_font_sizes/font_size = 48
text = "Settings"

[node name="Exit" type="Button" parent="VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme = ExtResource("3_2ggk3")
theme_override_font_sizes/font_size = 48
text = "Exit"

[connection signal="pressed" from="VBox/Find game" to="." method="_on_find_game_pressed"]
[connection signal="pressed" from="VBox/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBox/Exit" to="." method="_on_exit_pressed"]
